...
    <!--    MyLittleLemonApp file-->
    <string name="snackbar_message">Invalid Credentials</string>
    <string name="back_button_content_description">Back Button</string>

    <!--    Register Screen-->
    <string name="first_name_label">First Name</string>
    <string name="enter_first_name_placeholder">Enter first name</string>
    <string name="last_name_label">Last Name</string>
    <string name="enter_last_name_placeholder">Enter last name</string>
    <string name="date_of_birth_label">Date of Birth (optional)</string>
    <string name="select_date_of_birth_placeholder">mm/dd/yyyy</string>
    <string name="email_address_label">Email Address</string>
    <string name="enter_your_email_placeholder">Enter your email</string>
    <string name="create_password_label">Create Password</string>
    <string name="enter_your_password_placeholder">Enter your password</string>
    <!--    TODO: in order to have uppercase text i typed it in the uppercase letter-->
    <!--    <string name="button_create_my_account_label">Create My Account</string>-->
    <string name="button_create_my_account_label">CREATE MY ACCOUNT</string>
    <string name="already_member_label">Already a member?</string>
    <string name="login_label">Log In</string>
    <string name="date_picker_confirm_button_text_label">OK</string>
    <string name="date_picker_dismiss_button_text_label">Cancel</string>

...
    <string name="order_subtotal_label">Order Subtotal</string>

    <!--    Checkout Screen-->
    <string name="top_app_bar_checkout_title">Checkout</string>
    <string name="radio_button_pay_by_card_label">Pay by card</string>
    <string name="radio_button_pay_by_cash_label">Pay by cash</string>
    <string name="name_on_card_placeholder">Name on card</string>
    <string name="card_number_placeholder">Card number</string>
    <string name="expires_end_placeholder">Expires end</string>
    <string name="cvv_code_placeholder">Enter CVV</string>
    <string name="delivery_address_label">Delivery address</string>
    <string name="subtotal_label">Subtotal</string>
    <string name="delivery_fee_label">Delivery fee</string>
    <string name="total_label">Total</string>
    <string name="pay_now_button_label">Pay Now</string>

    <!--    Order Complete Screen-->
    <string name="order_complete_label">Order Completed!</string>
    <string name="paid_amount_label">Paid %s</string>
    <string name="order_again_button_label">Order Again</string>

...
