...
            modifier = Modifier.padding(dimensionResource(id = R.dimen.card_inside_padding))
        ) {
            Row(verticalAlignment = Alignment.CenterVertically) {
                RadioButton(
                    selected = paymentMethod is PaymentMethod.Card,
                    onClick = { onPaymentMethodChange(PaymentMethod.Card()) },
                    modifier = Modifier.testTag("Method Card")
                )
                Text(text = stringResource(id = R.string.radio_button_pay_by_card_label))
                RadioButton(
                    selected = paymentMethod is PaymentMethod.Cash,
                    onClick = { onPaymentMethodChange(PaymentMethod.Cash) },
                    modifier = Modifier.testTag("Method Cash")
                )
                Text(text = stringResource(id = R.string.radio_button_pay_by_cash_label))
            }

            if (paymentMethod is PaymentMethod.Card) {
                CustomTextField(
...
